--- a/taskstrings.html
+++ b/taskstrings.html
@@ -6,17 +6,21 @@
     <title>Document</title>
   </head>
   <body>
-
     <script>
-        // html slide 24- strings tasks
-          let _name = "JOHn"
-          console.log(_name.toLocaleLowerCase())
-         let no_2 = "The Dog Breed is German Shepherd"
-         console.log(no_2.slice(7,-8))
-         let no_2b = "Defeats for the Clinton forces"
-         console.log(no_2b.slice(16))
-         let three = "the lazy dog; ran so fast; it hit the wall"
-         console.log(three.length)
+      let _name = " JOHn .";
+      _name = _name.toLowerCase();
+      console.log(_name.slice(1, 5));
+
+      let no_2 = "The Dog Breed is German Shepherd";
+      console.log(no_2.slice(7, -8));
+      let no_2b =
+        "Defeats for the Clinton forces, this was her moment of triumph";
+      console.log(no_2b.slice(16, -33));
+      let three = "the lazy dog; ran so fast; it hit the wall";
+      console.log(three);
+      three = (three.split(";"))
+      console.log (three)
+      console.log(three.length)
     </script>
   </body>
 </html>
