--- a/taskstrings.html
+++ b/taskstrings.html
@@ -13,9 +13,12 @@
 
       let no_2 = "The Dog Breed is German Shepherd";
       console.log(no_2.slice(7, -8));
-      let no_2b =
+      
+      let text =
         "Defeats for the Clinton forces, this was her moment of triumph";
-      console.log(no_2b.slice(16, -33));
+      console.log(text.slice(-47, -33));
+
+
       let three = "the lazy dog; ran so fast; it hit the wall";
       console.log(three);
       three = (three.split(";"))
