--- a/myjsoper.html
+++ b/myjsoper.html
@@ -20,7 +20,7 @@
 
       let email = "mail@";
       console.log("email is null", email == "");
-      console.log("email is null", email.length == 0);
+      console.log("email is null", email.length > 0);
 
       //    3. Logical operators &&, ||
       // meant to combine conditions
