--- a/boolean-task.html
+++ b/boolean-task.html
@@ -15,8 +15,10 @@
     <script>
         let email = "eric@gmail.com"
         
-        console.log ((email.indexOf("@") >= 0) &&
-       (email.indexOf(".") > 0))
+        console.log (
+            (email.indexOf("@") >= 0) &&
+       (email.indexOf(".") > 0)
+       )
     </script>
 </body>
 </html>
