--- a/myjsoper.html
+++ b/myjsoper.html
@@ -35,8 +35,14 @@
       );
 
     //   used to check if a char is in a string
-    console.log(email.indexOf("@") > 0)
+    console.log(
+      (email.indexOf("@") > 0)
+      (email.indexOf(".") > 0)
+    )
     
+
+
+
 
     
     </script>
