--- a/js-strings-task.html
+++ b/js-strings-task.html
@@ -7,23 +7,24 @@
   </head>
   <body>
     <script>
+        
       let _name = " JOHn .";
       _name = _name.toLowerCase();
       console.log(_name.slice(1, 5));
 
-      let no_2 = "The Dog Breed is German Shepherd";
-      console.log(no_2.slice(7, -8));
+      let sentence1 = "The Dog Breed is German Shepherd";
+      console.log(sentence1.slice(7, -8));
       
-      let text =
+      let sentence2 =
         "Defeats for the Clinton forces, this was her moment of triumph";
-      console.log(text.slice(-47, -33));
+      console.log(sentence2.slice(-47, -33));
 
 
-      let three = "the lazy dog; ran so fast; it hit the wall";
-      console.log(three);
-      three = (three.split(";"))
-      console.log (three)
-      console.log(three.length)
+      let sentence3 = "the lazy dog; ran so fast; it hit the wall";
+      console.log(sentence3);
+      three = (sentence3.split(";"))
+      console.log (sentence3)
+      console.log(sentence3.length)
     </script>
   </body>
 </html>
