--- a/bool&no.html
+++ b/bool&no.html
@@ -39,7 +39,7 @@
           phone_number.indexOf("01") == 0 ||
           phone_number.indexOf("1") == 0 ||
           phone_number.indexOf("07") == 0 ||
-          phone_number.indexOf("7") == 0 
+          phone_number.indexOf("7") == 0 && phone_number >=9
     
       );
     </script>
