--- a/cond_stat.html
+++ b/cond_stat.html
@@ -37,15 +37,29 @@
       let year;
       year = 1900;
 
-      if (year % 4 == 0 && year % 100 != 0 && year % 400 != 0) {
-        console.log(year + " " + " Is a leap year");
-        // if (year % 100 == 0) {
-        //   console.log("It's divisible by 100");
-        // } else if (year % 400 == 0) {
-        //   console.log("It's divisible by 400");
-        // }
+      // if (year % 4 == 0 && year % 100 != 0 && year % 400 != 0) {
+      //   console.log(year + " " + " Is a leap year");
+      //   // if (year % 100 == 0) {
+      //   //   console.log("It's divisible by 100");
+      //   // } else if (year % 400 == 0) {
+      //   //   console.log("It's divisible by 400");
+      //   // }
+      // } else {
+      //   console.log(year + " " + "Is not a leap year");
+      // }
+
+      if (year % 4 === 0) {
+        if (year % 100 != 0) {
+          if (year % 400 === 0) {
+            console.log("Its a leap year");
+          } else {
+            console.log("It's definetely a leap year");
+          }
+        } else {
+          console.log("Divisible by 100 hence not a leap year");
+        }
       } else {
-        console.log(year + " " + "Is not a leap year");
+        console.log("Not a leap year");
       }
     </script>
   </body>
