--- a/task3.html
+++ b/task3.html
@@ -8,6 +8,11 @@
   <body>
     <div id="p_no"></div>
     <script>
+      // Write a program which gets a phone number from a form input or terminal. Validates the phone number by checking if it starts with +254.. or 07.. or 71… or 254.. or 01... Convert the number to start with +254…
+      // e.g if a user enters “0712345678”, the program should display “+254712345678”
+      // e.g if a user enters “0112345678”, the program should display “+254112345678”
+      // e.g if a user enters “712345678”, the program should display “+254712345678”
+
       let phone_no = prompt("Enter Number");
 
       if (phone_no.substring(0, 4) === "+254" && phone_no.length === 13) {
