--- a/task5.html
+++ b/task5.html
@@ -8,6 +8,10 @@
   <body>
     <div id="validater"></div>
     <script>
+      // Implement a program that takes 3 form inputs or from the terminal, and stores them in three variables.
+      // Return the largest of the three. Do this without using the the inbuilt max () function!
+      // The goal of this exercise is to think about some internals that programs normally take care of for us.
+
       let num1 = prompt("Enter Initial Number");
       let num2 = prompt("Enter Second Number");
       let num3 = prompt("Enter Last Number");
