--- a/task1.html
+++ b/task1.html
@@ -6,15 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <div class="base" id="base">45</div>
-    <div class="height" id="height">56</div> -->
     <div class="area" id="area"></div>
     <script>
-        
-    //   let base = document.getElementById("base").innerText;
-    //   let height = document.getElementById("height").innerText;
-    let base = prompt("enter base");
-    let height = prompt("enter height");
+      // Write a program that prompts the user to enter the base and height of a triangle and returns its area.
+
+      let base = prompt("enter base");
+      let height = prompt("enter height");
       let area = 0.5 * Number(base) * Number(height);
       document.getElementById("area").innerHTML = area;
     </script>
