--- a/task6.html
+++ b/task6.html
@@ -16,17 +16,12 @@
       <body>
         <div id="pass_validater"></div>
         <script>
-          //   for (i = 4; i > 0; i--) {
-          //     let password = prompt("Enter Password");
-          //     if (password != "admin@123") {
-          //       alert("Password dont match! Try again!");
-          //     } else if ((i == 0)) {
-          //       alert("No more tries left");
-          //     } else {
-          //       alert("You may enter");
-          //     }
-          //   }
-          for (i = 3; i > 0; i--) {
+          // Write a program input a password. Give them only 4 attempts 
+          // to check the passwords entered against “admin@123”. If the 
+          // password is correct access is granted. After you show them a message ,
+          //  the account is blocked.
+
+          for (i = 4; i > 0; i--) {
             let password = prompt("enter your password");
             // if it's correct it alerts and breaks
             if (password === "admin@123") {
@@ -34,7 +29,7 @@
               break;
             } //   if it's not and the tries have elapsed, then it alerts
             else if (i == 1) {
-              alert("No more tries left");
+              alert("The account is blocked");
             } //   if its not but the ries have not elapsed
             else {
               alert("try again");
