--- a/task8.html
+++ b/task8.html
@@ -7,6 +7,13 @@
   </head>
   <body>
     <script>
+      // Write a program that takes as input the speed of a car e.g 80.
+      // If the speed is less than 70, it should print “Ok”. Otherwise,
+      // for every 5 km/s above the speed limit (70), it should give the
+      // driver one demerit point and print the total number of demerit points.
+      // For example, if the speed is 80, it should print: “Points: 2”. If the
+      // driver gets more than 12 points, the function should print: “License suspended”
+
       let speed = prompt("Whats the speed?");
       if (speed == 70) {
         alert("Speed is OK");
@@ -36,11 +43,10 @@
         alert("Your license has been suspended");
       }
 
-
-    //   Using for loop to solve the above
-    for(i=70; i < 130; i+=5){
+      //   Using for loop to solve the above
+      for (i = 70; i < 130; i += 5) {
         
-    }
+      }
     </script>
   </body>
 </html>
