--- a/js_tasks/task8.html
+++ b/js_tasks/task8.html
@@ -14,6 +14,9 @@
       // For example, if the speed is 80, it should print: “Points: 2”. If the
       // driver gets more than 12 points, the function should print: “License suspended”
 
+
+      // using if statements
+
       // let speed = prompt("Whats the speed?");
       // if (speed == 70) {
       //   alert("Speed is OK");
