--- a/js_tasks/task14.htm
+++ b/js_tasks/task14.htm
@@ -13,18 +13,21 @@
       //   error “invalid character entered” and take the
       //    user to re-enter the inputs .
 
-      let num1 = prompt("Enter the first number");
-      let num2 = prompt("Enter the second number");
+         
 
-      if (parseInt(num1) === num1 && parseInt(num2) === num2) {
-        parseInt(num1) + parseInt(num2);
+      let num1 = Number(prompt("Enter the first number"));
+      let num2 = Number(prompt("Enter the second number"));
+
+      
+
+      if (parseInt(num1) === num1  && parseInt(num2) === num2 ) {
         total = num1 + num2;
-        alert("The total is: " + total);
-      } else if (parseInt(num1) !== num1 && parseInt(num2) !== num2) {
-        total = num1 + num2;
-        alert("The total is: " + total);
-      } else {
-        alert("Invalid characters");
+        alert("The sum is: " + total);
+      } else if ( parseFloat(num1) === num1 &&  parseFloat(num2) === num2)
+      { total = num1 + num2;
+        alert("The sum is: " + total);}
+      else {
+        alert("Invalid characters")
       }
     </script>
   </body>
