--- a/js_tasks/functionstask5.html
+++ b/js_tasks/functionstask5.html
@@ -6,18 +6,12 @@
     <title>Document</title>
   </head>
   <body>
+    <script src="functions.js"></script>
     <script>
-      function mytest(num1, num2=10) {
-        let s = "my test function " + num1 +" " +
-        num2;
+      //    Continue with the same program and find the person's
+      //    PAYEE using the taxable income in the previous task.
 
-        return s;
-      }
-
-     let m = mytest(100, 50);
-     console.log(m)
-      mytest(5, "John");
-      
+      console.log(findPayee(taxableIncome));
     </script>
   </body>
 </html>
