--- a/js_tasks/task16.htm
+++ b/js_tasks/task16.htm
@@ -21,7 +21,7 @@
       } else {
         nssf_pay = 18000;
       }
-       console.log("this is: "+ nssf_pay)
+       console.log("NSSF is: "+ nssf_pay)
     </script>
 
    
