--- a/js_tasks/functionstask6.html
+++ b/js_tasks/functionstask6.html
@@ -13,7 +13,7 @@
 //  net_salary = gross_salary - (nhif + nhdf +  nssf + payee)
 
 
-console.log(netSalary);
+console.log(calcNetSalary);
     </script>
 </body>
 </html>
