--- a/js_tasks/iffun.html
+++ b/js_tasks/iffun.html
@@ -58,7 +58,7 @@ function findPAYEE(taxable_income, personal_relief = 2400) {
             return netpayee
         }
 
-        
+        // clone
     </script>
 </body>
 </html>
